# mdrfc

./: .env.example  .gitignore  CLAUDE.md  DOGFOODING.md  README.md  alembic.ini  mdrfc_client.config  nginx.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_02_19_2139-c271fd63e1c9_create_tables.py  2026_02_25_1910-cf30aef8d9b6_update_users_table.py  2026_02_25_2048-ed52c23b8301_update_password_argon2_size_in_table_.py  2026_02_26_2040-688e93511f44_add_summary_content_in_table_rfcs.py  2026_03_02_1827-754f4d3232bb_added_parent_id_to_table_rfc_comments.py  2026_03_03_0000-a1b2c3d4e5f6_add_unique_and_fk_constraints.py  2026_03_03_2129-50c2e4bd5218_update_varchar_sizes.py  2026_03_03_2208-d6e1433da3ba_add_more_fields_to_users_and_rfcs.py  2026_03_09_1200-9f4c2d1a7b6e_harden_signup_and_verification.py  2026_03_11_1626-dabfec05fcf1_add_revision_support.py  2026_03_11_1650-caa5021323c7_fix_revision_agent_info_in_tables_pt_3.py  2026_03_11_1805-b1e4c6a9d2f0_add_message_to_rfc_revisions.py  2026_03_12_2246-5bebd2f72b04_fix_timestamps_in_tables.py  2026_03_13_2132-5a8afb8dfde1_added_public_bool_to_rfcs.py  2026_03_14_0216-ae31294efd38_add_support_for_quarantine.py  2026_03_19_2133-4e3d92f15423_added_table_readme_revisions.py  2026_03_23_1833-67d3110610bf_added_review_info_on_rfcs_table.py  2026_03_23_2015-8f9c4b5e2d1a_add_listing_indexes_for_pagination.py  2026_03_25_1200-a7b3c9d2e4f1_add_comment_references_table.py  2026_03_25_1645-f2c7a1b9d4e6_add_signup_rate_limit_states.py  2026_03_26_1200-1d2f3a4b5c6d_add_rfc_search_index.py
docs/: README.md  ROADMAP.md  client.md  quickstart.md  server.md
docs/endpoints/: README.md  delete_comment.md  delete_comment_quarantined.md  delete_rfc.md  delete_rfcs_quarantined.md  get_comment.md  get_comments.md  get_comments_quarantined.md  get_llms_txt.md  get_rev.md  get_revs.md  get_rfc.md  get_rfcs.md  get_rfcs_quarantined.md  get_rfcs_readme.md  get_root.md  get_users_me.md  post_comment.md  post_comment_quarantined.md  post_login.md  post_rev.md  post_rfc.md  post_rfcs_quarantined.md  post_signup.md  post_verify_email.md
examples/: hello_world.md  test_readme.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts  validation.ts
src/mdrfc/: api.py  cli.py  client.py  config.py  requests.py  responses.py  server.py  version.py
tests/: test_setup.py
tests/backend/: conftest.py  test_api_comments.py  test_api_rfcs.py  (+13 more)
(+62 files in other folders)
