[project]
name = "mdrfc"
version = "0.3.0"
description = "A server for hosting Markdown-formatted RFCs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Addison Kline", email = "addison@charon-labs.com"}
]
dependencies = [
    "alembic[tz]>=1.18.4",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.11.0",
    "python-multipart>=0.0.22",
    "resend>=2.23.0",
    "rich>=14.3.3",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn>=0.41.0",
]

[project.urls]
Repository = "https://github.com/addisonkline/mdrfc"

[project.scripts]
mdrfc = "mdrfc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdrfc"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]
